# edushell

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  KNOWN_ISSUES.md  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  build-real.txt  clippy.toml  fix-all.txt  fix-complete.sh  fix-desktop.sh  fix-final.txt  fix-now.txt  fix-session.txt  fix-simple.sh  install-commands.txt  install.sh  ssh-key.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  release.yml
adr/: README.md
branding/: README.md
config/: edushell.toml
core/edushell-core/: Cargo.toml
core/edushell-core/src/: apps.rs  clock.rs  error.rs  event.rs  lib.rs  lifecycle.rs  logging.rs  resource.rs  search.rs  service.rs  session.rs  settings.rs  state.rs  theme.rs  window.rs
core/edushell-core/src/config/: manager.rs  migration.rs  mod.rs  schema.rs
docs/: release-checklist.md
docs/adr/: ADR-001-vala-gtk4.md  ADR-002-cinnamon-base.md  ADR-003-wayland-x11.md  ADR-004-meson-build.md  ADR-005-gsettings-config.md  ADR-006-session-lifecycle.md  ADR-007-translation-system.md  ADR-008-plugin-architecture.md  ADR-009-component-replacement-strategy.md  INDEX.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  CINNAMON_COMPATIBILITY_MATRIX.md  COMPATIBILITY_TARGETS.md  COMPONENT_CATALOG.md  CONFIGURATION_THEME_LOCALIZATION.md  DESIGN_PRINCIPLES.md  ENGINEERING_PRINCIPLES.md  FUNCTIONAL_REQUIREMENTS.md  HARDWARE_TARGETS.md  (+20 more)
packaging/: edushell-session.desktop  edushell-session.sh  edushell.desktop
scripts/: build-package.sh  dev.sh
services/edushell-apps/: Cargo.toml
services/edushell-apps/src/: lib.rs
services/edushell-apps/src/backup/: mod.rs
services/edushell-apps/src/browser_hub/: mod.rs
services/edushell-apps/src/edu_terminal/: mod.rs
services/edushell-apps/src/file_manager/: mod.rs
services/edushell-apps/src/health/: mod.rs
services/edushell-apps/src/icons/: mod.rs
services/edushell-apps/src/integration/: mod.rs
services/edushell-apps/src/learning_engine/: mod.rs
services/edushell-apps/src/learning_hub/: mod.rs
services/edushell-apps/src/localization/: mod.rs
services/edushell-apps/src/login/: mod.rs
services/edushell-apps/src/office_hub/: mod.rs
services/edushell-apps/src/packaging/: mod.rs
services/edushell-apps/src/project_hub/: mod.rs
services/edushell-apps/src/recovery/: mod.rs
services/edushell-apps/src/search/: mod.rs
services/edushell-apps/src/session/: mod.rs
services/edushell-apps/src/settings_center/: mod.rs
services/edushell-apps/src/shortcuts/: mod.rs
services/edushell-apps/src/software_center/: mod.rs
services/edushell-apps/src/theme/: mod.rs
services/edushell-apps/src/update/: mod.rs
services/edushell-apps/src/wallpapers/: mod.rs
services/edushell-apps/src/welcome/: mod.rs
services/edushell-cli/: Cargo.toml
services/edushell-cli/src/: main.rs
services/edushell-core2/: Cargo.toml
services/edushell-core2/src/: lib.rs
services/edushell-core2/src/application_framework/: mod.rs
services/edushell-core2/src/compatibility_layer/: mod.rs
services/edushell-core2/src/config_engine/: mod.rs
services/edushell-core2/src/core/: mod.rs
services/edushell-core2/src/design_system/: mod.rs
services/edushell-core2/src/desktop_api/: mod.rs
services/edushell-core2/src/extension_framework/: mod.rs
services/edushell-core2/src/learning_engine/: mod.rs
services/edushell-core2/src/migration_engine/: mod.rs
services/edushell-core2/src/package_api/: mod.rs
services/edushell-core2/src/resource_engine/: mod.rs
services/edushell-core2/src/runtime/: mod.rs
services/edushell-core2/src/search_engine/: mod.rs
services/edushell-core2/src/service_framework/: mod.rs
services/edushell-core2/src/session_api/: mod.rs
services/edushell-core2/src/theme_engine/: mod.rs
services/edushell-core2/src/ui_kit/: mod.rs
services/edushell-core2/src/window_api/: mod.rs
services/edushell-core2/src/workspace_engine/: mod.rs
services/edushell-daemon/: Cargo.toml
services/edushell-daemon/src/: main.rs
services/edushell-sdk/: Cargo.toml
services/edushell-sdk/src/: lib.rs
services/edushell-sdk/src/api/: mod.rs
services/edushell-sdk/src/docs/: mod.rs
services/edushell-sdk/src/plugin/: mod.rs
services/edushell-sdk/src/search_provider/: mod.rs
services/edushell-sdk/src/theme/: mod.rs
services/edushell-sdk/src/widget/: mod.rs
services/edushell-session/: Cargo.toml
services/edushell-session/src/: main.rs
services/edushell-ui/: Cargo.toml
services/edushell-ui/src/: app.rs  lib.rs
services/edushell-ui/src/accessibility/: mod.rs
services/edushell-ui/src/animation/: mod.rs
services/edushell-ui/src/clock/: calendar.rs  mod.rs
services/edushell-ui/src/desktop/: context_menu.rs  icons.rs  mod.rs  wallpaper.rs
services/edushell-ui/src/dock/: dock_item.rs  mod.rs
services/edushell-ui/src/launcher/: app_grid.rs  categories.rs  mod.rs  search.rs
services/edushell-ui/src/localization/: mod.rs
services/edushell-ui/src/multi_monitor/: mod.rs
services/edushell-ui/src/notifications/: mod.rs  toast.rs
services/edushell-ui/src/overview/: mod.rs
services/edushell-ui/src/panel/: app_menu.rs  clock_widget.rs  mod.rs  quick_settings.rs  running_apps.rs  system_tray.rs  workspace.rs
services/edushell-ui/src/power/: mod.rs
services/edushell-ui/src/quick_settings/: mod.rs
services/edushell-ui/src/settings/: mod.rs
services/edushell-ui/src/testing/: mod.rs
services/edushell-ui/src/theme/: mod.rs
wm/eduwm/: Cargo.toml
wm/eduwm/src/: lib.rs
wm/eduwm/src/animation/: mod.rs
wm/eduwm/src/compositor/: mod.rs
wm/eduwm/src/core/: mod.rs
wm/eduwm/src/debug/: mod.rs
wm/eduwm/src/input/: mod.rs
wm/eduwm/src/monitor/: mod.rs
wm/eduwm/src/recovery/: mod.rs
wm/eduwm/src/security/: mod.rs
wm/eduwm/src/testing/: mod.rs
wm/eduwm/src/theme/: mod.rs
wm/eduwm/src/wayland/: mod.rs
wm/eduwm/src/workspace/: mod.rs
wm/eduwm/src/x11/: mod.rs
(+16 files in other folders)
