[workspace]
resolver = "2"
members = [
    "core/edushell-core",
    "services/edushell-daemon",
    "services/edushell-ui",
    "services/edushell-apps",
    "services/edushell-sdk",
    "services/edushell-cli",
    "services/edushell-core2",
    "services/edushell-session",
    "wm/eduwm",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["EduShell Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
zbus = "4"
glib = "0.20"
gtk4 = { version = "0.8", features = ["v4_12"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
semver = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
fnv = "1"
async-trait = "0.1"
serde_json = "1"
