[package]
name = "edushell-core2"
version = "2.0.0"
edition = "2021"
description = "EduShell Core v2 — platform foundation for v2.0+"
license = "GPL-3.0-or-later"
authors = ["EduShell Team <dev@edushell.id>"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
