[package]
name = "edushell-sdk"
version = "1.0.0"
edition = "2021"
description = "EduShell SDK for third-party developers"
license = "GPL-3.0-or-later"
authors = ["EduShell Team <dev@edushell.id>"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
