[package]
name = "edushell-ui"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "EduShell desktop shell UI — panel, dock, launcher, overview, notifications, quick-settings, and all graphical components"

[features]
default = ["gtk"]
gtk = ["dep:gtk4", "dep:glib", "dep:libadwaita", "dep:gdk4-wayland", "dep:gdk4-x11"]
wayland = ["gtk", "dep:gdk4-wayland"]
x11 = ["gtk", "dep:gdk4-x11"]
dbus = ["edushell-core/dbus"]

[dependencies]
edushell-core = { path = "../../core/edushell-core", default-features = false }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }

# GTK stack (optional)
gtk4 = { workspace = true, optional = true }
glib = { workspace = true, optional = true }
libadwaita = { version = "0.6", optional = true }
gdk4-wayland = { version = "0.8", optional = true }
gdk4-x11 = { version = "0.8", optional = true }

# Clipboard, images, icons
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
fuzzy-matcher = "0.3"
